2009-12-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Use $DJDIR rather than $DJGPP to detect running on DJGPP.
	* automake.in (Language): Use $ENV{'DJDIR'} for the
	$ENV{'SHELL'} override.
	* bootstrap: Use $DJDIR for setting BOOTSTRAP_SHELL, to fix
	bootstrapping under MinGW when $DJGPP has been set.

	Do not rely on Perl symlink status, for MSYS perl.
	* automake.in (require_file_internal): Ensure presence of
	symlink target file; MSYS perl symlink doesn't return an error
	status when the file could not be created (copied, on this
	system).  Fixes symlink.test failure.

2009-12-04  Stefano Lattarini  <stefano.lattarini@gmail.com>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Avoid Solaris sh `set -e' bug in vala4.test.
	* tests/vala4.test: New variable $cwd, holding the full path of the
	current directory.  Use it instead of `pwd` command substitution,
	to avoid Heirloom/Solaris Sh bug with `set -e'.

2009-11-28  Jim Meyering  <meyering@redhat.com>

	do not put world-writable directories in distribution tarballs
	* lib/am/distdir.am (distdir): Do not make all directories
	group- or world-writable.  Instead, use 755.
	* tests/subpkg4.test (test-distdir-is-readable): Check for new,
	more restricted permissions.

2009-11-29  Karl Berry  <karl@freefriends.org>

	Rewrite `gnupload --help' examples.
	* lib/gnupload: Use GNU style version numbers, a generic package
	name, and more useful examples.

2009-11-28  Jim Meyering  <meyering@redhat.com>

	avoid a warning from perl-5.11
	* lib/Automake/Wrap.pm (_tab_length): Remove useless use of tr's
	"/d" modifier.

2009-11-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Distribute the Automake bootstrap script.
	* Makefile.am (EXTRA_DIST): Add bootstrap.
	Report by Jan Engelhardt.

2009-10-31  Jim Meyering  <meyering@redhat.com>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Don't let an envvar setting of "$fail" cause build failure.
	Without this change, in a project using an automake-generated