@@ -24,6 +24,7 @@ Andrew Suffield		asuffield@debian.org
 Andris Pavenis		pavenis@lanet.lv
 Angus Leeming		a.leeming@ic.ac.uk
 Anthony Green		green@cygnus.com
+Antonio Diaz Diaz	ant_diaz@teleline.es
 Arkadiusz Miskiewicz	misiek@pld.ORG.PL
 Art Haas		ahaas@neosoft.com
 Arto C. Nirkko		anirkko@insel.ch
