@@ -1,3 +1,11 @@
+2009-12-05  Antonio Diaz Diaz  <ant_diaz@teleline.es>
+
+	Replace unlzma, gunzip, bunzip2 with pack tool -d invocation.
+	* lib/am/distdir.am (distcheck): Use lzma -d, gzip -d, bzip2 -d,
+	instead of the respective un$tool invocation, to avoid depending
+	on another tool.
+	* THANKS: Update.
+
 2009-12-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Use $DJDIR rather than $DJGPP to detect running on DJGPP.
